src/objects/String_map__c.object
<CustomObject>
    <description>This object hold Enum mapping in CRM</description>
    <fields>
        <fullName>AttributeValue__c</fullName>
        <label>AttributeValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectTypeCode__c</fullName>
        <label>ObjectTypeCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StringMap_CRM_GUID__c</fullName>
        <label>StringMap_CRM_GUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>String Map</label>
    <nameField>
        <label>String Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>String Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>